# file-2-db

./: .gitignore  README.md  file2sql.py  pandas_fs_event_handler.py  pyproject.toml  run.sh
